borsh-derive/src/internals/deserialize/struct/snapshots/borsh_derive__internals__deserialize__r#struct__tests__check_deserialize_with_attr.snap
---
source: borsh-derive/src/internals/deserialize/struct/mod.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl<K: Ord, V> borsh::de::BorshDeserialize for A<K, V>
where
    K: borsh::de::BorshDeserialize,
    V: borsh::de::BorshDeserialize,
{
    fn deserialize_reader<R: borsh::__private::maybestd::io::Read>(
        reader: &mut R,
    ) -> ::core::result::Result<Self, borsh::__private::maybestd::io::Error> {
        Ok(Self {
            x: third_party_impl::deserialize_third_party(reader)?,
            y: borsh::BorshDeserialize::deserialize_reader(reader)?,
        })
    }
}

