borsh-derive/src/internals/deserialize/struct/snapshots/borsh_derive__internals__deserialize__r#struct__tests__simple_struct.snap
---
source: borsh-derive/src/internals/deserialize/struct/mod.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl borsh::de::BorshDeserialize for A {
    fn deserialize_reader<R: borsh::__private::maybestd::io::Read>(
        reader: &mut R,
    ) -> ::core::result::Result<Self, borsh::__private::maybestd::io::Error> {
        Ok(Self {
            x: borsh::BorshDeserialize::deserialize_reader(reader)?,
            y: borsh::BorshDeserialize::deserialize_reader(reader)?,
        })
    }
}

